--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,48 +1,69 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Shopping List Page</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand mx-2" href="#" style="font-size: 35px; color: white;">Shopping List</a>
 
-    <h5>Name:</h5>
-    <p>{{name}}</p>
+        <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <span class="navbar-text" style="font-size: 24px; color: white;">
+                        Welcome, {{ name }} (Class: {{ class }})
+                    </span>
+                </li>
+            </ul>
+        </div>
+        
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="btn btn-outline-danger mx-2" href="{% url 'main:logout' %}">
+                    Logout
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-    <h5>Class:</h5>
-    <p>{{class}}</p>
+    <div class="container mt-4">
+        <h1>Home</h1>
+        <p>Anda memiliki {{ products|length }} produk</p>
 
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Description</th>
-            <th>Date Added</th>
-        </tr>
-    
-        {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
-    
-        {% for product in products %}
-            <tr>
-                <td>{{product.name}}</td>
-                <td>{{product.price}}</td>
-                <td>{{product.description}}</td>
-                <td>{{product.date_added}}</td>
-            </tr>
-        {% endfor %}
-    </table>
-    
-    <br />
-    
-    <a href="{% url 'main:create_product' %}">
-        <button>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Description</th>
+                    <th>Date Added</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
+                {% for product in products %}
+                    <tr>
+                        <td>{{ product.name }}</td>
+                        <td>{{ product.price }}</td>
+                        <td>{{ product.description }}</td>
+                        <td>{{ product.date_added }}</td>
+                        <td>
+                            <a href="{% url 'main:edit_product' product.pk %}" class="btn btn-primary">
+                                Edit
+                            </a>
+                            <a href="{% url 'main:delete_product' product.pk %}" class="btn btn-danger">
+                                Delete
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+        <br />
+
+        <a href="{% url 'main:create_product' %}" class="btn btn-primary">
             Add New Product
-        </button>
-    </a>
+        </a>
 
-    <a href="{% url 'main:logout' %}">
-        <button>
-            Logout
-        </button>
-    </a>
-
-    <h5>Sesi terakhir login: {{ last_login }}</h5>
-
+        <h5>Sesi terakhir login: {{ last_login }}</h5>
+    </div>
 {% endblock content %}
