--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block content %} <!-- content is a block -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand mx-2" href="#" style="font-size: 35px; color: white;">Shopping List</a>
 
@@ -93,10 +93,10 @@
                     <td>${item.fields.date_added}</td>
                     <td>
                         <a href="edit-product/${item.pk}">
-                            <button>Edit</button>
+                            <button class='btn btn-primary'>Edit</button>
                         </a>
                         <a href="delete/${item.pk}">
-                            <button>Delete</button>
+                            <button class='btn btn-primary'>Delete</button>
                         </a>
                     </td>
                 </tr>`;
